unpackaged/main/default/objects/Case/fields/Customer_Objective__c.field-meta.xml
<CustomField>
    <fullName>Customer_Objective__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Objective</label>
    <referenceTo>Customer_Objective__c</referenceTo>
    <relationshipLabel>Success Checks</relationshipLabel>
    <relationshipName>Success_Checks</relationshipName>
    <type>Lookup</type>
</CustomField>