unpackaged/main/default/objects/Case/fields/Customer_Segmentation__c.field-meta.xml
<CustomField>
    <fullName>Customer_Segmentation__c</fullName>
    <formula>IF(ISPICKVAL(Account.Customer_Segmentation__c, &quot;TECH_TOUCH&quot;),&#39;Tech Touch&#39;,
IF(ISPICKVAL(Account.Customer_Segmentation__c, &quot;MID_TOUCH&quot;),&#39;Mid Touch&#39;,
IF(ISPICKVAL(Account.Customer_Segmentation__c, &quot;HIGH_TOUCH&quot;),&#39;High Touch&#39;,
&#39;&#39;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Segmentation</label>
    <type>Text</type>
</CustomField>