unpackaged/main/default/objects/Case/fields/Deadline_color__c.field-meta.xml
<CustomField>
    <fullName>Deadline_color__c</fullName>
    <formula>IF(AND(Case_Deadline__c &lt;= TODAY(),
   NOT(ISPICKVAL(Status, &quot;Closed&quot;))),
   IMAGE(&quot; /img/samples/light_red.gif&quot;,&quot;RED&quot;,20,40),
IF(AND(Case_Deadline__c - TODAY()=1,
   NOT(ISPICKVAL(Status, &quot;Closed&quot;))),
   IMAGE(&quot; /img/samples/light_yellow.gif&quot;,&quot;YELLOW&quot;,20,40),
IF(AND(Case_Deadline__c - TODAY() &gt;1,
   NOT(ISPICKVAL(Status,&quot;Closed&quot;))),
   IMAGE(&quot; /img/samples/light_green.gif&quot;,&quot;GREEN&quot;,20,40),&quot;&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deadline color</label>
    <type>Text</type>
</CustomField>