unpackaged/main/default/objects/Case/fields/Description_and_images__c.field-meta.xml
<CustomField>
    <fullName>Description_and_images__c</fullName>
    <description>for CMP layout only</description>
    <label>Description and images</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>