unpackaged/main/default/objects/Case/fields/Do_not_create_an_opportunity__c.field-meta.xml
<CustomField>
    <fullName>Do_not_create_an_opportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do not create an opportunity</label>
    <type>Checkbox</type>
</CustomField>