unpackaged/main/default/objects/Case/fields/Email_Deadline_3__c.field-meta.xml
<CustomField>
    <fullName>Email_Deadline_3__c</fullName>
    <description>Used only in Lightning Email Templates</description>
    <formula>MID(TEXT( TODAY()+35), 9, 2)&amp;&quot;.&quot;&amp; MID(TEXT( Today()+35), 6, 2)&amp;&quot;.&quot;&amp;LEFT( TEXT( TODAY()+35) , 4)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email_Deadline_3</label>
    <type>Text</type>
</CustomField>