unpackaged/main/default/objects/Case/fields/Email_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Email_Deadline__c</fullName>
    <description>Used only  in lightning email templates</description>
    <formula>MID( TEXT(TODAY()+21), 9, 2)&amp;&quot;.&quot;&amp; MID( TEXT(Today()+21), 6, 2)&amp;&quot;.&quot;&amp;LEFT(  TEXT(TODAY()+21), 4)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email_Deadline</label>
    <type>Text</type>
</CustomField>