unpackaged/main/default/objects/Case/fields/Email_Deadline_INF__c.field-meta.xml
<CustomField>
    <fullName>Email_Deadline_INF__c</fullName>
    <description>Used only in lightning email templates</description>
    <formula>MID(TEXT(TODAY()+7), 9, 2)&amp;&quot;.&quot;&amp; MID(TEXT(Today()+7), 6, 2)&amp;&quot;.&quot;&amp;LEFT(TEXT( TODAY()+7) , 4)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email_Deadline_INF</label>
    <type>Text</type>
</CustomField>