unpackaged/main/default/objects/Case/fields/Email_Shop_TS_Id__c.field-meta.xml
<CustomField>
    <fullName>Email_Shop_TS_Id__c</fullName>
    <description>To use in Lightning Email Templates</description>
    <formula>Shop__r.ts2_id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email_Shop_TS_Id</label>
    <type>Text</type>
</CustomField>