unpackaged/main/default/objects/Case/fields/Email_Shop_URL__c.field-meta.xml
<CustomField>
    <fullName>Email_Shop_URL__c</fullName>
    <formula>Shop__r.url__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email_Shop_URL</label>
    <type>Text</type>
</CustomField>