unpackaged/main/default/objects/Case/fields/Email_Shop_Valid_to__c.field-meta.xml
<CustomField>
    <fullName>Email_Shop_Valid_to__c</fullName>
    <description>To use in Lightning Email Templates</description>
    <formula>Shop__r.valid_to__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email_Shop_Valid_to</label>
    <type>Date</type>
</CustomField>