unpackaged/main/default/objects/Case/fields/eTrusted_Callout__c.field-meta.xml
<CustomField>
    <fullName>eTrusted_Callout__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>eTrusted Callout</label>
    <referenceTo>eTrusted_Callout__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>