unpackaged/main/default/objects/Case/fields/eTrusted_static_Questionnaire_Link__c.field-meta.xml
<CustomField>
    <fullName>eTrusted_static_Questionnaire_Link__c</fullName>
    <label>eTrusted static Questionnaire Link</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>