unpackaged/main/default/objects/Case/fields/external_id__c.field-meta.xml
<CustomField>
    <fullName>external_id__c</fullName>
    <externalId>true</externalId>
    <label>External Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>