unpackaged/main/default/objects/Case/fields/FAQ__c.field-meta.xml
<CustomField>
    <fullName>FAQ__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>link for Salesforce Support Cases to Knowledge Article</description>
    <label>FAQ</label>
    <referenceTo>FAQ__kav</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>