unpackaged/main/default/objects/Case/fields/Finance_Manager__c.field-meta.xml
<CustomField>
    <fullName>Finance_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Finance Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Finance_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>