unpackaged/main/default/objects/Case/fields/follow_up__c.field-meta.xml
<CustomField>
    <fullName>follow_up__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Follow Up</label>
    <type>Checkbox</type>
</CustomField>