unpackaged/main/default/objects/Case/fields/Generated_Questionnaire_Link__c.field-meta.xml
<CustomField>
    <fullName>Generated_Questionnaire_Link__c</fullName>
    <label>Generated Questionnaire Link</label>
    <length>100</length>
    <type>Text</type>
</CustomField>