unpackaged/main/default/objects/Case/fields/Has_Import_Case__c.field-meta.xml
<CustomField>
    <fullName>Has_Import_Case__c</fullName>
    <defaultValue>false</defaultValue>
    <description>set by Import Process</description>
    <label>Has Import Case</label>
    <type>Checkbox</type>
</CustomField>