unpackaged/main/default/objects/Case/fields/Import_Status__c.field-meta.xml
<CustomField>
    <fullName>Import_Status__c</fullName>
    <label>Import Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Precheck Data</fullName>
            </value>
            <value>
                <fullName>Schedule Import</fullName>
            </value>
            <value>
                <fullName>Inform Stakeholder</fullName>
            </value>
            <value>
                <fullName>Clean Data</fullName>
            </value>
            <value>
                <fullName>Import</fullName>
            </value>
            <value>
                <fullName>Check DB</fullName>
            </value>
            <value>
                <fullName>Final Feedback Stakeholder</fullName>
            </value>
            <value>
                <fullName>Clean PROD Data</fullName>
                <isActive>false</isActive>
                <label>Clean PROD Data</label>
            </value>
            <value>
                <fullName>Clean QA Data</fullName>
                <isActive>false</isActive>
                <label>Clean QA Data</label>
            </value>
            <value>
                <fullName>QA Import</fullName>
                <isActive>false</isActive>
                <label>QA Import</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>