unpackaged/main/default/objects/Case/fields/Import_time_stemp__c.field-meta.xml
<CustomField>
    <fullName>Import_time_stemp__c</fullName>
    <label>Import time stemp</label>
    <type>Date</type>
</CustomField>