unpackaged/main/default/objects/Case/fields/is_Engagement_relevant__c.field-meta.xml
<CustomField>
    <fullName>is_Engagement_relevant__c</fullName>
    <formula>IF(AND(OR(Owner:User.UserRole.DeveloperName = &#39;Director_Customer_Experience&#39;, CONTAINS(Owner:User.UserRole.DeveloperName , &#39;CX_Manager&#39;),
CONTAINS(Owner:User.UserRole.DeveloperName , &#39;Touch&#39;)), 
NOT(CONTAINS(Owner:User.UserRole.DeveloperName , &#39;Legal&#39;)),
NOT(CONTAINS(Owner:User.UserRole.DeveloperName , &#39;Account_Management&#39;))), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>is Engagement relevant</label>
    <type>Checkbox</type>
</CustomField>