unpackaged/main/default/objects/Case/fields/isQuestioner__c.field-meta.xml
<CustomField>
    <fullName>isQuestioner__c</fullName>
    <description>used for Listview and the SF Ticketsystem</description>
    <formula>IF(Questioner__c = $User.Id, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>isQuestioner</label>
    <type>Checkbox</type>
</CustomField>