unpackaged/main/default/objects/Case/fields/Issue_Notes__c.field-meta.xml
<CustomField>
    <fullName>Issue_Notes__c</fullName>
    <description>used to Compliance Sub-Cases only</description>
    <label>Issue Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>