unpackaged/main/default/objects/Case/fields/Issue_Type__c.field-meta.xml
<CustomField>
    <fullName>Issue_Type__c</fullName>
    <label>Issue Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BP / No buyer protection integration</fullName>
            </value>
            <value>
                <fullName>BP / Incorrect TS ID</fullName>
            </value>
            <value>
                <fullName>BP / Trustcard error</fullName>
            </value>
            <value>
                <fullName>CMP / Audit criteria</fullName>
            </value>
            <value>
                <fullName>CMP / Membership terms</fullName>
            </value>
            <value>
                <fullName>CMP / Reactivation</fullName>
            </value>
            <value>
                <fullName>CMP / Website offline or not available</fullName>
            </value>
            <value>
                <fullName>QI / Refund Indicator</fullName>
            </value>
            <value>
                <fullName>QI / Response Indicator</fullName>
            </value>
            <value>
                <fullName>QI / Review Indicator</fullName>
            </value>
            <value>
                <fullName>QI / Unresponsive shop</fullName>
            </value>
            <value>
                <fullName>INF / Contract</fullName>
            </value>
            <value>
                <fullName>INF / Delayed payment</fullName>
            </value>
            <value>
                <fullName>INF / Fake shop</fullName>
            </value>
            <value>
                <fullName>INF / Former member</fullName>
            </value>
            <value>
                <fullName>INF / Incomplete audit</fullName>
            </value>
            <value>
                <fullName>INF / Non-member (certifiable)</fullName>
            </value>
            <value>
                <fullName>INF / Non-member (non-certifiable)</fullName>
            </value>
            <value>
                <fullName>INF / Other</fullName>
            </value>
            <value>
                <fullName>INF / Partner shop</fullName>
            </value>
            <value>
                <fullName>INF / Reviews only membership</fullName>
            </value>
            <value>
                <fullName>INF / Risk insolvency</fullName>
            </value>
            <value>
                <fullName>INF / Risk no financials received</fullName>
            </value>
            <value>
                <fullName>INF / Risk no protection framework</fullName>
            </value>
            <value>
                <fullName>BP / BP parameter issue</fullName>
                <isActive>false</isActive>
                <label>BP / BP parameter issue</label>
            </value>
            <value>
                <fullName>BP / Incorrect BP model</fullName>
                <isActive>false</isActive>
                <label>BP / Incorrect BP model</label>
            </value>
            <value>
                <fullName>BP / Legacy integration</fullName>
                <isActive>false</isActive>
                <label>BP / Legacy integration</label>
            </value>
            <value>
                <fullName>BP / Non-standard Trustcard</fullName>
                <isActive>false</isActive>
                <label>BP / Non-standard Trustcard</label>
            </value>
            <value>
                <fullName>BP / Other Excellence issue</fullName>
                <isActive>false</isActive>
                <label>BP / Other Excellence issue</label>
            </value>
            <value>
                <fullName>BP / Shop system error</fullName>
                <isActive>false</isActive>
                <label>BP / Shop system error</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>