unpackaged/main/default/objects/Case/fields/Jira_Status__c.field-meta.xml
<CustomField>
    <fullName>Jira_Status__c</fullName>
    <label>Jira Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Assigned</fullName>
            </value>
            <value>
                <fullName>backlog</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Done</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Reopen</fullName>
            </value>
            <value>
                <fullName>ToDo</fullName>
            </value>
            <value>
                <fullName>Ready for Testing</fullName>
            </value>
            <value>
                <fullName>Testing</fullName>
            </value>
            <value>
                <fullName>Blocked</fullName>
            </value>
            <value>
                <fullName>Ready for Deployment</fullName>
            </value>
            <value>
                <fullName>Deployed on Prod</fullName>
            </value>
            <value>
                <fullName>Ready for Release</fullName>
            </value>
            <value>
                <fullName>BA-Testing</fullName>
            </value>
            <value>
                <fullName>Needs rework</fullName>
            </value>
            <value>
                <fullName>To Do</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>