unpackaged/main/default/objects/Case/fields/Last_Email__c.field-meta.xml
<CustomField>
    <fullName>Last_Email__c</fullName>
    <label>Last Email</label>
    <type>DateTime</type>
</CustomField>