unpackaged/main/default/objects/Case/fields/last_email_formated__c.field-meta.xml
<CustomField>
    <fullName>last_email_formated__c</fullName>
    <formula>Last_Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>last_email_formated</label>
    <type>Date</type>
</CustomField>