unpackaged/main/default/objects/Case/fields/Legal_Customer_Segmentation__c.field-meta.xml
<CustomField>
    <fullName>Legal_Customer_Segmentation__c</fullName>
    <formula>TEXT(Account.Legal_Customer_Segmentation__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Legal Customer Segmentation</label>
    <type>Text</type>
</CustomField>