unpackaged/main/default/objects/Case/fields/Lift_Check_Box__c.field-meta.xml
<CustomField>
    <fullName>Lift_Check_Box__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lift Check Box</label>
    <type>Checkbox</type>
</CustomField>