unpackaged/main/default/objects/Case/fields/Lift_Quote_annual_revenue_tier__c.field-meta.xml
<CustomField>
    <fullName>Lift_Quote_annual_revenue_tier__c</fullName>
    <label>Lift Quote annual revenue tier</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>