unpackaged/main/default/objects/Case/fields/Lift_Quote_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Lift_Quote_Start_Date__c</fullName>
    <label>Lift Quote Start Date</label>
    <type>Date</type>
</CustomField>