unpackaged/main/default/objects/Case/fields/Lift_Quote_Total_Fee__c.field-meta.xml
<CustomField>
    <fullName>Lift_Quote_Total_Fee__c</fullName>
    <label>Lift Quote Total Fee</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>