unpackaged/main/default/objects/Case/fields/Lift_reason_lost__c.field-meta.xml
<CustomField>
    <fullName>Lift_reason_lost__c</fullName>
    <label>Lift reason lost</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Andere Themen mit höherer Prio (z.B. Risk Thema)</fullName>
                <isActive>false</isActive>
                <label>Andere Themen mit höherer Prio (z.B. Risk Thema)</label>
            </value>
            <value>
                <fullName>Avoiding cancellation</fullName>
            </value>
            <value>
                <fullName>Bad custommer service</fullName>
                <isActive>false</isActive>
                <label>Bad custommer service</label>
            </value>
            <value>
                <fullName>Bad price</fullName>
                <isActive>false</isActive>
                <label>Bad price</label>
            </value>
            <value>
                <fullName>Created by mistake</fullName>
            </value>
            <value>
                <fullName>Downgrade</fullName>
            </value>
            <value>
                <fullName>Forecasted turnover not lift relevant</fullName>
                <isActive>false</isActive>
                <label>Forecasted turnover not lift relevant</label>
            </value>
            <value>
                <fullName>Forecast kaum höher als aktuelle Einstufung</fullName>
                <isActive>false</isActive>
                <label>Forecast kaum höher als aktuelle Einstufung</label>
            </value>
            <value>
                <fullName>Kunde meldet sich nicht zurück &gt; kein Zwangslift, da KS nicht hoch genug sind, um Zwangslift zu rechtfertigen</fullName>
                <isActive>false</isActive>
                <label>Kunde meldet sich nicht zurück &gt; kein Zwangslift, da KS nicht hoch genug sind, um Zwangslift zu rechtfertigen</label>
            </value>
            <value>
                <fullName>Nicht liftbar, weil z.B. Papiervertrag</fullName>
                <isActive>false</isActive>
                <label>Nicht liftbar, weil z.B. Papiervertrag</label>
            </value>
            <value>
                <fullName>No potential</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
                <isActive>false</isActive>
                <label>Other</label>
            </value>
            <value>
                <fullName>Special agreement Existing Business</fullName>
            </value>
            <value>
                <fullName>Special agreement New Business</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>