unpackaged/main/default/objects/Case/fields/Lift_Status__c.field-meta.xml
<CustomField>
    <fullName>Lift_Status__c</fullName>
    <label>Lift Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>First Lift Mail sent</fullName>
            </value>
            <value>
                <fullName>First Reminder sent</fullName>
            </value>
            <value>
                <fullName>Second Reminder sent</fullName>
            </value>
            <value>
                <fullName>Doublecheck data</fullName>
            </value>
            <value>
                <fullName>Revenue confirmed</fullName>
            </value>
            <value>
                <fullName>No Lift adjustment</fullName>
            </value>
            <value>
                <fullName>Lift successful</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>