unpackaged/main/default/objects/Case/fields/No_certification_references__c.field-meta.xml
<CustomField>
    <fullName>No_certification_references__c</fullName>
    <defaultValue>false</defaultValue>
    <description>only used to Compliance</description>
    <label>No certification references</label>
    <type>Checkbox</type>
</CustomField>