unpackaged/main/default/objects/Case/fields/Not_Leading_reason__c.field-meta.xml
<CustomField>
    <fullName>Not_Leading_reason__c</fullName>
    <label>Not Leading reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>