unpackaged/main/default/objects/Case/fields/Owner_auto_assigned__c.field-meta.xml
<CustomField>
    <fullName>Owner_auto_assigned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Owner auto assigned</label>
    <type>Checkbox</type>
</CustomField>