unpackaged/main/default/objects/Case/fields/Parent_Case_Name__c.field-meta.xml
<CustomField>
    <fullName>Parent_Case_Name__c</fullName>
    <formula>Parent.Subject</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Case Name</label>
    <type>Text</type>
</CustomField>