unpackaged/main/default/objects/Case/fields/PI_Manager__c.field-meta.xml
<CustomField>
    <fullName>PI_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PI Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>PI_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>