unpackaged/main/default/objects/Case/fields/Pilot_User__c.field-meta.xml
<CustomField>
    <fullName>Pilot_User__c</fullName>
    <formula>IF(OR(Owner:User.Alias = &#39;jmüll&#39;, Owner:User.Alias = &#39;jgörg&#39;, Owner:User.Alias = &#39;truamu&#39;, Owner:User.Alias = &#39;truohu&#39;, Owner:User.Alias = &#39;senge&#39;, Owner:User.Alias = &#39;bfrie&#39;), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pilot User</label>
    <type>Checkbox</type>
</CustomField>