unpackaged/main/default/objects/Case/fields/PowerofOne__c.field-meta.xml
<CustomField>
    <fullName>PowerofOne__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PowerofOne</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>