unpackaged/main/default/objects/Case/fields/Primary_Account__c.field-meta.xml
<CustomField>
    <fullName>Primary_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Legacy Cases</relationshipLabel>
    <relationshipName>LegacyCases</relationshipName>
    <type>Lookup</type>
</CustomField>