unpackaged/main/default/objects/Case/fields/Priority_flags__c.field-meta.xml
<CustomField>
    <fullName>Priority_flags__c</fullName>
    <formula>IF($Profile.Name = &quot;CX Manager&quot;||$Profile.Name = &quot;Finance Manager&quot; ||$Profile.Name = &quot;Technical Success Manager&quot; ,
IMAGE(CASE(Priority,&quot;High&quot;,&quot;/img/samples/flag_red.gif&quot;,&quot;Callback&quot;,&quot;/img/samples/flag_yellow.gif&quot;,&quot;/s.gif&quot;),&quot;PriorityFlag&quot;), IMAGE(CASE(Priority,&quot;Low&quot;,&quot;/img/samples/flag_green.gif&quot;,&quot;Medium&quot;,&quot;/img/samples/flag_yellow.gif&quot;,&quot;High&quot;,&quot;/img/samples/flag_red.gif&quot;,&quot;Callback&quot;,&quot;/img/samples/flag_yellow.gif&quot;,&quot;/s.gif&quot;),&quot;PriorityFlag&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Priority flags</label>
    <type>Text</type>
</CustomField>