unpackaged/main/default/objects/Case/fields/Process_status__c.field-meta.xml
<CustomField>
    <fullName>Process_status__c</fullName>
    <description>applicable to CMP cases</description>
    <label>Process status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Riskcheck</fullName>
            </value>
            <value>
                <fullName>Resolution</fullName>
            </value>
            <value>
                <fullName>INF 1 no audit</fullName>
            </value>
            <value>
                <fullName>INF 1 reminder</fullName>
            </value>
            <value>
                <fullName>INF 2 deactivation</fullName>
            </value>
            <value>
                <fullName>INF 2 reminder</fullName>
            </value>
            <value>
                <fullName>Internal Feedback</fullName>
            </value>
            <value>
                <fullName>Convey</fullName>
            </value>
            <value>
                <fullName>First Mail</fullName>
            </value>
            <value>
                <fullName>Reminder</fullName>
            </value>
            <value>
                <fullName>Monitoring</fullName>
            </value>
            <value>
                <fullName>Feedback Partnermgmt</fullName>
                <isActive>false</isActive>
                <label>Feedback Partnermgmt</label>
            </value>
            <value>
                <fullName>Sales</fullName>
                <isActive>false</isActive>
                <label>Sales</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>