unpackaged/main/default/objects/Case/fields/Questioner__c.field-meta.xml
<CustomField>
    <fullName>Questioner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User who asks a Question with a Salesforce Support Case</description>
    <label>Questioner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>