unpackaged/main/default/objects/Case/fields/Ready_to_expand_Automation_running__c.field-meta.xml
<CustomField>
    <fullName>Ready_to_expand_Automation_running__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ready to expand Automation running</label>
    <type>Checkbox</type>
</CustomField>