unpackaged/main/default/objects/Case/fields/Reason_won_lost_detail__c.field-meta.xml
<CustomField>
    <fullName>Reason_won_lost_detail__c</fullName>
    <label>Reason won/lost detail</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>