unpackaged/main/default/objects/Case/fields/Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Request_Type__c</fullName>
    <label>Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Feature</fullName>
            </value>
            <value>
                <fullName>Incident</fullName>
            </value>
            <value>
                <fullName>Invites - Cancelling Invites (eTrusted)</fullName>
            </value>
            <value>
                <fullName>Invites - Frequency Limit (eTrusted)</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Platform - Contract Consolidation (eTrusted)</fullName>
                <isActive>false</isActive>
                <label>Platform - Contract Consolidation (eTrusted)</label>
            </value>
            <value>
                <fullName>Platform - Password reset issue</fullName>
            </value>
            <value>
                <fullName>Reviews - Delete reviews (eTrusted)</fullName>
                <isActive>false</isActive>
                <label>Reviews - Delete reviews (eTrusted)</label>
            </value>
            <value>
                <fullName>Reviews - Rate-Now-Link</fullName>
                <isActive>false</isActive>
                <label>Reviews - Rate-Now-Link</label>
            </value>
            <value>
                <fullName>Reviews - Sync reviews</fullName>
            </value>
            <value>
                <fullName>Shop profile - Remove top relevant reviews</fullName>
            </value>
            <value>
                <fullName>Shop profile - Review is missing</fullName>
            </value>
            <value>
                <fullName>Social Media Creator</fullName>
            </value>
            <value>
                <fullName>Temporary Consent Management Fix</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>