unpackaged/main/default/objects/Case/fields/Resolution__c.field-meta.xml
<CustomField>
    <fullName>Resolution__c</fullName>
    <description>Resolution for Salesforce Support Cases, RichText for Text styles</description>
    <label>Resolution</label>
    <length>130000</length>
    <type>Html</type>
</CustomField>